--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       <!-- Modal content -->
       <div class="modal-content" alt="register a new account. enter details below. press escape to exit">
         <span class="close" onclick="closeModal()">&times;</span>
-        <img src="logowhite.svg" alt="website-logo" class="sub-logo" style="width: 200px" />
+        <img src="logo.svg" alt="website-logo" class="sub-logo" style="width: 200px" />
         <h1>Register</h1>
         <div class="form-box" id="form-ct">
           <form class="inputs">
@@ -187,7 +187,7 @@
     <footer class="footer" alt="web page footer">
       <div class="footer-content">
         <div class="footer-logo">
-          <img src="logowhite.svg" alt="website-logo" class="footer-logo" />
+          <img src="logo.svg" alt="website-logo" class="footer-logo" />
         </div>
         <div class="footer-links">
           <a href="" alt="clickable link to Home"> Home </a>
@@ -209,12 +209,6 @@
     <script>
       // Get the modal
       var modal = document.getElementById('registerModal');
-
-      // Get the button that opens the modal
-      // var btn = document.getElementById('trigger-modal');
-
-      // Get the <span> element that closes the modal
-      // var span = document.getElementsByClassName('close')[0];
 
       var modalOpen = false;
 
